whitespace fix

--- a/dash-sig.css
+++ b/dash-sig.css
@@ -29,7 +29,6 @@
     background-position: bottom;
     background-repeat: no-repeat;
     border-radius: 55px 55px 55px 55px / 55px 5px 55px 5px;
-    white-space: nowrap;
   }
   
   #dashsig .dashcont {
